<resources>
    <string name="app_name">Deal Shot</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="errands_around_me">Errands around me</string>
    <string name="my_profile">my profile</string>
    <string name="errand_info">Errand info</string>
    <string name="take_it">Take it!</string>
    <string name="action_join_app">Join Deal Shot!</string>
    <string name="plaza_welcome">Welcome, %s!</string>
    <string name="create_errand">Create Errand</string>
    <string name="errand_name_hint">Errand name</string>
    <string name="create_errand_dialog_title">Create Errand</string>
    <string name="create">Create</string>
    <string name="claim">Claim</string>
    <string name="release">Release</string>
    <string name="remove">Remove</string>
    <string name="unknown">Unknown</string>
    <string name="cannot_login_warning">Sorry, cannot sign in at this moment.</string>
    <string name="sign_out">Sign Out</string>
    <string name="delivery_location_hint">Delivery Location</string>
    <string name="pick_up_location_hint">Pick up location</string>
    <string name="plaza_tag">Plaza</string>
    <string name="user_center_tag">User center</string>
    <string name="pick_up_locale">Pick up at: %s</string>
    <string name="deliver_locale">Deliver at: %s</string>
    <string name="errand_detail_title">Errand Detail</string>
    <string name="assignee_hint">Assignee</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="owned_errand_title">Posted</string>
    <string name="closed_errand_title">Completed</string>
    <string name="wip_errand_title">Undergoing</string>
    <string name="status_locale">Current status: %s</string>
    <string name="errand_type_hint">Choose your errand type</string>
    <string name="delivery_notes_hint">Any other concerns?</string>
    <string name="dropoff_location_hint">Where you want to go?</string>
    <string name="setoff_time_hint">When to leave?</string>
    <string-array name="errand_type_arrays">
        <item>I want to go somewhere.</item>
        <item>I want to have my fill.</item>
        <item>Walmart/Meijer is too far</item>
        <item>I'm gonna do something else</item>
    </string-array>
</resources>
