<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent"
                                    app:cardCornerRadius="10sp"
                                    android:layout_margin="5dp">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="5dp"
                  android:id="@+id/errand_title"
                  android:textSize="25sp"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/errand_status"
                  android:layout_below="@id/errand_title"
                  android:textSize="18sp"
                  android:text="@string/status_locale"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/errand_pick_up_location"
                  android:layout_below="@+id/errand_status"
                  android:textSize="18sp"
                  android:text="@string/pick_up_locale"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="5dp"
                  android:id="@+id/errand_delivery_up_location"
                  android:layout_below="@+id/errand_pick_up_location"
                  android:textSize="18sp"
                  android:text="@string/deliver_locale"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>